Resources/sass/modules/_overview.scss
/**
 *
 * Overview
 *
 */

/* Silent classes related to this document
   ========================================================================== */

/* Styles
   ========================================================================== */

.overview {

  /* Global settings
   ========================================================================== */

  &--section {
    margin: 0 auto;
    max-width: 100em;
    text-align: center;
  }

  &--description {
    color: $gray-darker;
    font-weight: lighter;
    margin: 0 $gutter 2em $gutter;
    text-align: center;
  }

  &--spinner {
    margin: 0 auto;
  }

  &--header {
    width: 100%;
    text-align: left;
    margin-left: 3em;
    margin-right: 3em;
    margin-bottom: .5em;

    &--actions-menu {
      right: 3em;
      left: auto;
    }
  }

  &--screens,
  &--media,
  &--channels,
  &--slides {
    background-color: $white;
    border: 1px solid $border-color;
    margin-right: auto;
    margin-bottom: 1.5em;
    margin-left: auto;
    max-width: $layout-max-width;
    padding-top: 1em;
    padding-bottom: 1em;

    text-align: left;

    @include border-radius($border-radius);
    @include box-sizing(border-box);
  }

  &--channel {
    display: inline-block;

    @include breakpoint($breakpoint-lap) {
    }

    @include strip-link-styles();

    &.channel-remove {
      width: 300px;
      margin-left: 1.5em;
      margin-right: 1.5em;
    }
  }

  &--screen,
  &--media-single,
  &--slide,
  &--channel {
    position: relative;

    display: inline-block;
    margin-bottom: 1em;
    margin-left: $grid-markup-fix;
    width: 33.3333%;

    text-align: center;
    vertical-align: top;
  }

  &--slide-link,
  &--channel-link {
    position: relative;

    border: 1px solid $border-color;
    margin-bottom: .5em;
    margin-left: 1em;
    min-height: 15em;
    padding: 1em;

    @include border-radius($border-radius);
    @include box-sizing(border-box);
    @include strip-link-styles();
  }

  &--slides-container,
  &--channel-container {
    display: inline-block;
  }

  &--channel-empty {
    width: 300px; // Static sizes to correspond with the inline styles set on non empty channels.
    height: 168.75px;
    position: relative;
    background-color: rgb(204, 204, 204);
    cursor: pointer;
  }

  &--channel-empty-text {
    font-size: 1em;
    position: relative;
    top: 50%;

    @include translateY(-50%);
  }

  &--channel-label,
  &--slide-label,
  &--media-label {
    text-align: center;
  }

  &--channel-date,
  &--slide-date {
    color: $gray;
    font-size: .9em;
  }

  &--filter {
    border-bottom: 0;
    display: inline-block;
    max-width: $layout-max-width;
    margin: 0 auto;
    position: relative;
    width: 100%;
  }

  &--filter-field {
    height: 3.1em;
  }

  &--filter-owner,
  &--filter-orientation {
    margin-bottom: 1em;
    position: relative;
    width: 100%;
    margin-left: $grid-markup-fix;
    box-sizing: border-box;
    padding-right: 0;
    text-align: center;

    @include breakpoint($breakpoint-desk) {
      width: 35%;
      display: inline-block;
      vertical-align: top;
    }
  }

  &--filter-owner {
    @include breakpoint($breakpoint-desk) {
      width: 25%;

      &-foursplit {
        width: 24%;
        margin-right: .5em;
      }
    }
  }

  &--filter-owner-button {
    background: $gray-lightest;
    border: 1px solid $gray-lighter;
    box-sizing: border-box;
    cursor: pointer;
    padding: 0.75em 0;
    width: 100%;

    @include border-radius(.5em);
    @include strip-link-styles($gray-darker);
  }

  &--form {
    margin: 0 0 1em 0;
    width: 100%;

    @include breakpoint($breakpoint-desk) {
      margin: 0 0 1em $grid-markup-fix;
      width: 40%;
      display: inline-block;
      box-sizing: border-box;
      padding-right: 1em;

      &.full-width {
        width: 75%;
      }
    }
  }

  &--sorting {
    display: inline-block;
    margin: 0 0 1em 0;
    max-width: $layout-max-width;
    width: 100%;

    @include breakpoint($breakpoint-desk) {
      margin: 0 auto 1em;
    }
  }

  &--filter-label,
  &--sort-label,
  &--label {
    font-weight: bold;
    overflow: hidden;
    text-align: left;
    width: 100%;
  }

  &--sort-links {
    text-align: center;
  }

  &--filter-twosplit-left,
  &--filter-twosplit-right,
  &--filter-threesplit-left,
  &--filter-threesplit-middle,
  &--filter-threesplit-right,
  &--filter-foursplit-left,
  &--filter-foursplit-middle,
  &--filter-foursplit-right,
  &--horisontal,
  &--vertical,
  &--newest,
  &--oldest,
  &--alphabetical {
    background: $gray-lightest;
    border: 1px solid $gray-lighter;
    box-sizing: border-box;
    border-right: 0;
    color: $gray-darker;
    cursor: pointer;
    display: inline-block;
    margin-left: $grid-markup-fix;
    padding: 0.75em 0;
    text-align: center;
    width: 33.3%;

    @include strip-link-styles($gray-darker);

    &:first-child {
      @include border-radius(.5em 0 0 .5em);
    }

    &:last-child {
      border-right: 1px solid $gray-lighter;

      @include border-radius(0 .5em .5em 0);
    }

    &.is-active {
      background: $gray-lighter;
      font-weight: bold;
    }
  }

  &--filter-twosplit-left,
  &--filter-twosplit-right {
    width: 50%;
  }

  &--filter-foursplit-left,
  &--filter-foursplit-middle,
  &--filter-foursplit-right {
    width: 25%;
  }

  &--horisontal,
  &--vertical {
    width: 50%;
  }

  /* Screens overview
 ========================================================================== */
  &--screen-link {
    display: inline-block;
    font-size: .9em;

    @include strip-link-styles();
  }

  &--screen-wrapper {
    margin: 0;
    background: $gray-lightest;
    background-position: center;
    box-sizing: border-box;
    color: $gray-darker;
    text-align: center;

    @include breakpoint($breakpoint-lap) {
      margin: 0 1em 1em 0;
    }
  }

  &--screen-text {
    padding: .5em;
    text-overflow: ellipsis;
    word-wrap: break-word;
    height: 90%;
    overflow: hidden;
  }

  &--screen-all,
  &--screen-horisontal,
  &--screen-vertical {
    width: 33.3%;
  }

  /* Media overview
  ========================================================================== */
  &--media-single {
    position: relative;

    cursor: pointer;
  }

  &--media-overlay {
    background-color: transparentize($white, .35);
    color: $black;
    font-size: .8rem; // We use rem since the container fontsize is 0 (See "&--media-single" selector)
    position: absolute;
    left: 0;
    right: 0;
    bottom: -30%;
    height: 30%;
  }

  &--media-image {
    max-height: 10rem; // We use rem since the container fontsize is 0 (See "&--media-single" selector)
    max-width: 300px;
    background-image: url('../../images/squares.jpg');
    background-repeat: repeat;
    min-width: 200px;
  }

  &--media-overlay-inner {
    padding: .5em;
  }

  &--media-text {
    max-width: 80%;
    overflow-x: hidden;
    text-overflow: ellipsis;
  }

  &--no-video {
    background: $gray-lightest;
    border: 2px solid $gray-light;
    box-sizing: border-box;
    color: $gray;
    font-size: 1rem;
    height: 10rem;
    line-height: 10rem;
    vertical-align: middle;
    width: 10rem; // We use rem since the container fontsize is 0 (See "&--media-single" selector)
  }

  &--media-link {
    @include add-overlay(overview);
  }

  /* slide overview
 ========================================================================== */
  &--slide-link {
    @include add-overlay(overview);
  }

  // Default check circled icon.
  &--link-check {
    @extend %image-check-icon--placeholder;
  }

  /* channel overview
 ========================================================================== */
  &--channel-link {
    @include add-overlay(overview);
  }

  &--channel-remove {
    position: absolute;
    right: -5px;
    top: -5px;
    left: auto;

    width: 20px;
    height: 20px;

    z-index: 1;
  }

  &--channel-overlay {
    display: block;
    z-index: 1;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0);
    position: absolute;
  }

  &--publishing-icon {
    position: absolute;
    top: -5px; // Static since we are working within a static div anyway.
    left: -5px;

    width: 20px;
    height: 20px;

    z-index: 1;
  }

  &--groups {
    margin-bottom: 12px;
  }

  &--checkboxes {
    text-align: left;
    position: relative;
    border-radius: 0.5em;
    background-color: #fafafa;
    color: #595959;
    border: 1px solid #e6e6e6;
    padding: 12px;
  }

  &--checkbox {
    margin-left: 10px;
    margin-right: 20px;

    &-label {
      display: inline-block !important;
    }
  }
}

